@@ -1,3 +1,11 @@
+December 2020 (1.23.0) - jsmith@resonatingmedia.com
+
+- Check only LSB header for overlapping runlevels to fix.
+- Updated manual page to indicate scripts with LSB headers
+  that do not include a start (or stop) runlevel will not
+  be marked for starting (or stopping).
+
+
 October 2019 (1.22.0) - jsmith@resonatingmedia.com
 
 - Removed debugging flag from Makefile. It should be
